--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,13 @@
             "name": "Mikle"
         }
     ],
+    "autoload": {
+        "files": [
+            "src/Differ.php"
+        ]
+    },
     "require": {
-        "docopt/docopt": "^1.0"
+        "docopt/docopt": "^1.0",
+        "lstrojny/functional-php": "^1.17"
     }
 }
