--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,13 @@
 {
     "name": "hexlet/code",
-    "bin": [
-        "bin/gendiff"
-    ],
+    "bin": ["bin/gendiff"],
     "description": "php-project-lvl2",
     "authors": [
         {
             "name": "Mikle"
         }
     ],
+    "license": "MIT",
     "autoload": {
         "files": [
             "src/Differ.php"
@@ -17,5 +16,9 @@
     "require": {
         "docopt/docopt": "^1.0",
         "lstrojny/functional-php": "^1.17"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "3.*",
+        "phpunit/phpunit": "^9.5"
     }
 }
