--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,14 @@
     "license": "MIT",
     "autoload": {
         "files": [
-            "src/Differ.php"
+            "src/Differ.php",
+            "src/Parsers.php"
         ]
     },
     "require": {
         "docopt/docopt": "^1.0",
-        "lstrojny/functional-php": "^1.17"
+        "lstrojny/functional-php": "^1.17",
+        "symfony/yaml": "^5.4"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "3.*",
