--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     "autoload": {
         "files": [
             "src/Differ.php",
-            "src/Parsers.php"
+            "src/Parsers.php",
+            "src/Formatters.php",
+            "src/Formats/Stylish.php"
         ]
     },
     "require": {
