--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
             "src/Differ.php",
             "src/Parsers.php",
             "src/Formatters.php",
-            "src/Formats/Stylish.php"
+            "src/Formatters/Stylish.php",
+            "src/Formatters/Plain.php"
         ]
     },
     "require": {
