--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     "autoload": {
         "files": [
             "src/Differ.php",
-            "src/Parsers.php",
-            "src/Formatters.php",
+            "src/Parser.php",
+            "src/Formatter.php",
             "src/Formatters/Stylish.php",
             "src/Formatters/Plain.php",
             "src/Formatters/Json.php"
